[package]
name = "hypertor"
version = "0.1.0"
edition = "2021"
authors = ["hupe1980"]
repository = "https://github.com/hupe1980/hypertor"
license = "MIT"
description = "Rust library for HTTP requests over Tor, supporting HTTP/HTTPS with configurable TLS via hyper and arti_client."
keywords = ["tor", "http", "client", "requests"]
categories = ["network-programming", "web"]
publish = true

[dependencies]
anyhow = "1.0.87"
bytes = "1"
tor-rtcompat = { version = "0", features = ["tokio", "native-tls"] }
arti-client = {version = "0.22.0", features = ["anyhow", "tokio", "native-tls", "onion-service-client"]} 
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["http1", "client"] }
hyper-util = { version = "0.1.7", features = ["tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-native-tls = "0.3.1"
tracing-subscriber = "0.3.18"
